--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   <<: *default
   database: churrasdafirma_development
 
-test:
+test: &test
   <<: *default
   database: churrasdafirma_test
 
@@ -16,3 +16,6 @@ production:
   database: churrasdafirma_production
   username: churrasdafirma
   password: <%= ENV['CHURRASDAFIRMA_DATABASE_PASSWORD'] %>
+
+cucumber:
+  <<: *test
