--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ rvm:
 before_script:
   - psql -c 'create database churrasdafirma_test' -U postgres
 script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake
+  - RAILS_ENV=test rake db:migrate --trace
+  - RAILS_ENV=test rake
